[workspace.dependencies]

dominator = "0.5.34"
futures-signals = "0.3.33"
log = "0.4.20"
matchit = "0.7.3"
regex = "1.10.2"
wasm-bindgen = "0.2.89"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["HtmlElement", "Url"] }

[workspace]
resolver = "2"

members = [
    "tutorials/hello_world",
    "src/doc-imports",
]