[workspace.dependencies]

dominator = "0.5.38"
dwind = "0.2.0"
dwind-macros = "0.1.0"
dwui = "0.2.0"
futures-signals = "0.3.34"
js-sys = "0.3.69"
log = "0.4.20"
matchit = "0.7.3"
regex = "1.10.2"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["Document", "HtmlElement", "HtmlCollection", "Url", "Event", "DomRect", "Element"] }

[workspace]
resolver = "2"

members = [
    "tutorials/hello_world",
    "tutorials/all_of_the_others",
    "src/doc-imports",
]