[package]
name = "all_of_the_others"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
doc-imports = { path = "../../src/doc-imports" }

dmat-components.workspace = true
dominator.workspace = true
futures-signals.workspace = true
wasm-bindgen.workspace = true

[build-dependencies]
dmat-components-style.workspace = true
