[package]
name = "all_of_the_others"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
doc-imports = { path = "../../src/doc-imports" }
dominator.workspace = true
dwind.workspace = true
dwind-macros.workspace = true
dwui.workspace = true
futures-signals.workspace = true
log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
wasm-logger = "0.2.0"
